// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Monthpicker /> event handling:  closes the overlay when clicking anywhere outside the overlay 1`] = `
.c0 * {
  box-sizing: border-box;
}

.c0:focus {
  outline: none;
}

<MonthPicker
  hoverColor="#d3d3d330"
  initialYear={2010}
  month={1}
  onChange={[MockFunction]}
  primaryColor="#27718c"
  secondaryColor="white"
  year={2010}
>
  <styled.div
    innerRef={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <div
      className="c0"
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <div
        onClick={[Function]}
      >
        <div
          className="child"
        >
          Child
        </div>
      </div>
    </div>
  </styled.div>
</MonthPicker>
`;

exports[`<Monthpicker /> event handling:  opens the overlay when clicking on the child 1`] = `
.c1 {
  margin-top: 8px;
  -webkit-transform-origin: top center;
  -ms-transform-origin: top center;
  transform-origin: top center;
  -webkit-animation: dXhcnZ .2s;
  animation: dXhcnZ .2s;
  position: absolute;
  box-shadow: 0 0 8px 0px rgba(0,0,0,0.12);
  border: 1px solid;
}

.c6 {
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  border-radius: 1px;
  font-size: 14px;
  background-color: #27718c;
  color: white;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c6:focus {
  outline: none;
}

.c7 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  border-radius: 1px;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c7:hover {
  background-color: #d3d3d330;
}

.c7:focus {
  outline: none;
}

.c4 {
  cursor: pointer;
  fill: white;
}

.c3 {
  cursor: pointer;
  fill: white;
  fill: white;
}

.c2 {
  padding: 16px 8px;
  font-weight: bold;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #27718c;
  color: white;
}

.c0 * {
  box-sizing: border-box;
}

.c0:focus {
  outline: none;
}

.c5 {
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<MonthPicker
  hoverColor="#d3d3d330"
  initialYear={2010}
  month={1}
  onChange={[MockFunction]}
  primaryColor="#27718c"
  secondaryColor="white"
  year={2010}
>
  <styled.div
    innerRef={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <div
      className="c0"
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <div
        onClick={[Function]}
      >
        <div
          className="child"
        >
          Child
        </div>
      </div>
      <styled.div>
        <div
          className="c1"
        >
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="#27718c"
            secondaryColor="white"
          >
            <div
              className="c2"
            >
              <Component
                hoverColor="#d3d3d330"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
              >
                <styled.svg
                  height="24"
                  hoverColor="#d3d3d330"
                  onClick={[Function]}
                  primaryColor="#27718c"
                  secondaryColor="white"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="c3"
                    height="24"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                    <path
                      d="M0-.5h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </styled.svg>
              </Component>
              2010
              <Component
                hoverColor="#d3d3d330"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
              >
                <styled.svg
                  height="24"
                  hoverColor="#d3d3d330"
                  onClick={[Function]}
                  primaryColor="#27718c"
                  secondaryColor="white"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="c4"
                    height="24"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                    <path
                      d="M0-.25h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </styled.svg>
              </Component>
            </div>
          </styled.div>
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="#27718c"
            secondaryColor="white"
          >
            <div
              className="c5"
            >
              <styled.div
                focussed={true}
                hoverColor="#d3d3d330"
                key="Januar"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={true}
              >
                <div
                  className="c6"
                  onClick={[Function]}
                  selected={true}
                >
                  Jan
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="Februar"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Feb
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="März"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Mär
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="April"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Apr
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="Mai"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Mai
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="Juni"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Jun
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="Juli"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Jul
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="August"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Aug
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="September"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Sep
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="Oktober"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Okt
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="November"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Nov
                </div>
              </styled.div>
              <styled.div
                focussed={false}
                hoverColor="#d3d3d330"
                key="Dezember"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={false}
              >
                <div
                  className="c7"
                  onClick={[Function]}
                  selected={false}
                >
                  Dez
                </div>
              </styled.div>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</MonthPicker>
`;

exports[`<Monthpicker /> event handling:  sets the focussed date to 1 month earlier when hitting ArrowLeft 1`] = `
.c0 {
  cursor: pointer;
  border: 1px solid #27718c;
  background-color: #d3d3d330;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  border-radius: 1px;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c0:hover {
  background-color: #d3d3d330;
}

.c0:focus {
  outline: none;
}

<styled.div
  focussed={true}
  hoverColor="#d3d3d330"
  key="Januar"
  onClick={[Function]}
  primaryColor="#27718c"
  secondaryColor="white"
  selected={false}
>
  <div
    className="c0"
    onClick={[Function]}
    selected={false}
  >
    Jan
  </div>
</styled.div>
`;

exports[`<Monthpicker /> event handling:  sets the focussed date to 1 month later when hitting ArrowRight 1`] = `
.c0 {
  cursor: pointer;
  border: 1px solid #27718c;
  background-color: #d3d3d330;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  border-radius: 1px;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c0:hover {
  background-color: #d3d3d330;
}

.c0:focus {
  outline: none;
}

<styled.div
  focussed={true}
  hoverColor="#d3d3d330"
  key="Februar"
  onClick={[Function]}
  primaryColor="#27718c"
  secondaryColor="white"
  selected={false}
>
  <div
    className="c0"
    onClick={[Function]}
    selected={false}
  >
    Feb
  </div>
</styled.div>
`;

exports[`<Monthpicker /> event handling:  sets the focussed date to 3 month earlier when hitting ArrowUp 1`] = `
.c0 {
  cursor: pointer;
  border: 1px solid #27718c;
  background-color: #d3d3d330;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  border-radius: 1px;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c0:hover {
  background-color: #d3d3d330;
}

.c0:focus {
  outline: none;
}

<styled.div
  focussed={true}
  hoverColor="#d3d3d330"
  key="Januar"
  onClick={[Function]}
  primaryColor="#27718c"
  secondaryColor="white"
  selected={false}
>
  <div
    className="c0"
    onClick={[Function]}
    selected={false}
  >
    Jan
  </div>
</styled.div>
`;

exports[`<Monthpicker /> event handling:  sets the focussed date to 3 month later when hitting ArrowDown 1`] = `
.c0 {
  cursor: pointer;
  border: 1px solid #27718c;
  background-color: #d3d3d330;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  border-radius: 1px;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c0:hover {
  background-color: #d3d3d330;
}

.c0:focus {
  outline: none;
}

<styled.div
  focussed={true}
  hoverColor="#d3d3d330"
  key="April"
  onClick={[Function]}
  primaryColor="#27718c"
  secondaryColor="white"
  selected={false}
>
  <div
    className="c0"
    onClick={[Function]}
    selected={false}
  >
    Apr
  </div>
</styled.div>
`;

exports[`<Monthpicker /> renders its children 1`] = `
<styled.div
  innerRef={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <div
    onClick={[Function]}
  >
    Child
  </div>
</styled.div>
`;
